# minion-dev

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  calculate.py  calculator.py  pyproject.toml
src/miniondev/: __init__.py  cli.py  orchestrator.py
src/miniondev/agent/: __init__.py  base.py  executor.py  finalizer.py  planner.py
src/miniondev/llm/: __init__.py  client.py
src/miniondev/models/: __init__.py  execution.py  finalization.py  plan.py  work_item.py  work_result.py
src/miniondev/tools/: __init__.py  basic_tools.py  registry.py
tests/: conftest.py  test_agents.py  test_executor.py  test_finalizer.py  test_llm_client.py  test_models.py  test_orchestrator.py  test_planner.py  test_tools.py
tests/legacy_tests/: legacy_test_agent_core.py  legacy_test_client.py  legacy_test_tools.py  legacy_test_tools_bedrock.py
