[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniondev"
version = "0.1.0"
description = "Autonomous ticket-to-PR pipeline (MVP)"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.26.0",
  "pydantic>=2.0.0",
]

[project.scripts]
miniondev = "miniondev.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
