[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniondev"
version = "0.1.0"
description = "Autonomous ticket-to-PR pipeline (MVP)"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.26.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
miniondev = "miniondev.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "integration: marks tests as integration tests (may be slow, require credentials)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
